fix: typos in opam file.

--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -12,9 +12,9 @@ bug-reports: "https://github.com/UQ-PAC/gtirb-semantics/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.6"}
-  "asli.libASL"
+  "asli"
   "ocaml-protoc-plugin"
-  "hextring"
+  "hexstring"
   "base64"
   "odoc" {with-doc}
 ]
