--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -17,6 +17,9 @@ depends: [
   "ocaml-protoc-plugin"
   "hexstring"
   "base64"
+  "ctypes"
+  "ctypes-foreign"
+  "conf-llvm"
   "odoc" {with-doc}
 ]
 build: [
