main.ml: gzip compression

--- a/bin/dune
+++ b/bin/dune
@@ -2,7 +2,7 @@
  (public_name gtirb_semantics)
  (name main)
  (modules main)
- (libraries gtirb_semantics base64 yojson asli.libASL llvm_disas)
+ (libraries gtirb_semantics base64 yojson asli.libASL llvm_disas decompress.gz bigstringaf)
  (flags     :standard (:include ../llvm-disas/llvmconf.sexp))
 )
 
