--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -14,7 +14,7 @@ depends: [
   "dune" {>= "3.6"}
   "yojson"
   "asli"
-  "ocaml-protoc-plugin"
+  "ocaml-protoc-plugin" {>= "6.1.0"}
   "base64"
   "odoc" {with-doc}
 ]
