--- a/bin/dune
+++ b/bin/dune
@@ -2,4 +2,6 @@
  (public_name gtirb_semantics)
  (name main)
  (flags (:standard -w -69))
- (libraries base64 yojson gtirb_semantics asli.libASL))
+ (preprocess
+  (pps ppx_jane -dont-apply=sexp_message))
+ (libraries base64 yojson gtirb_semantics asli.libASL janestreet_lru_cache))
