--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -36,4 +36,7 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/UQ-PAC/gtirb-semantics.git"
-pin-depends: ["asli.dev" "git+https://github.com/UQ-PAC/aslp.git"]
+pin-depends: [
+  ["asli.dev" "git+https://github.com/UQ-PAC/aslp.git"]
+  ["aslp_client_server_ocaml.dev" "git+https://github.com/UQ-PAC/aslp-rpc.git#marshall-rpc-clientserver"]
+]
