--- a/gtirb_semantics.opam.template
+++ b/gtirb_semantics.opam.template
@@ -1,4 +1,4 @@
 pin-depends: [
   ["asli.dev" "git+https://github.com/UQ-PAC/aslp.git"]
-  ["aslp_client_server_ocaml.dev" "git+https://github.com/UQ-PAC/aslp-rpc.git#marshall-rpc-clientserver"]
+  ["aslp_client_server_ocaml.dev" "git+https://github.com/UQ-PAC/aslp-rpc.git"]
 ]
