Proof of concept; client/server architecture with shared cache (#23)
Add --client and --server 

- adds client/server architecture over unix domain socket,  which outsources the lifting to the aslp_client_server_ocaml package 
- avoids lifter init time time for small examples when using --client
- and share an in-memory instruction cache.

---------

Co-authored-by: rina <k@rina.fyi>

--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -16,6 +16,9 @@ depends: [
   "asli"
   "ocaml-protoc-plugin" {>= "6.1.0"}
   "base64"
+  "aslp_client_server_ocaml"
+  "lwt"
+  "mtime"
   "odoc" {with-doc}
 ]
 build: [
@@ -33,3 +36,6 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/UQ-PAC/gtirb-semantics.git"
+pin-depends: [
+  ["asli.dev" "git+https://github.com/UQ-PAC/aslp.git"]
+]
