--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,9 @@
 (executable
  (public_name gtirb_semantics)
  (name main)
- (flags (:standard -w -69))
- (libraries base64 yojson gtirb_semantics asli.libASL))
+ (flags (:standard -w -69 -w -32 -w -27 -w -26))
+ (libraries base64 yojson gtirb_semantics asli.libASL 
+            aslp_client_server_ocaml.aslp_common 
+            aslp_client_server_ocaml.aslp_client 
+            aslp_client_server_ocaml.aslp_server
+            lwt.unix mtime mtime.clock))
