--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -14,7 +14,7 @@ depends: [
   "asli" {>= "0.3.0"}
   "ocaml-protoc-plugin" {>= "6.1.0"}
   "base64"
-  "aslp_client_server_ocaml"
+  "aslp_client_server_ocaml" {>= "0.1.2"}
   "lwt"
   "mtime"
   "odoc" {with-doc}
