--- a/gtirb_semantics.opam
+++ b/gtirb_semantics.opam
@@ -11,10 +11,10 @@ depends: [
   "ocaml"
   "dune" {>= "3.6"}
   "yojson"
-  "asli"
+  "asli" {>= "0.3.0"}
   "ocaml-protoc-plugin" {>= "6.1.0"}
   "base64"
-  "aslp_client_server_ocaml"
+  "aslp_client_server_ocaml" {>= "0.1.2"}
   "lwt"
   "mtime"
   "odoc" {with-doc}
@@ -34,6 +34,3 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/UQ-PAC/gtirb-semantics.git"
-pin-depends: [
-  ["asli.dev" "git+https://github.com/UQ-PAC/aslp.git"]
-]
